<resources>
    <string name="app_name">BankApp-2v</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_login">Sign in</string>
    <string name="header_desc_login">Login to your account to access all the feature.</string>
    <string name="hint_login_login_edit_text">Enter your login</string>
    <string name="hint_login_password_edit_text">Password</string>
    <string name="button_text_login">Sign in</string>
    <string name="button_text_dont_have_account">I don\'t have an account</string>
    <string name="error_login_not_valid">Login is not valid</string>
    <string name="error_password_not_valid">Password is not valid</string>
    <string name="incorrect_login_password">Login or password is incorrect</string>
    <string name="incorrect_registration">Login or password is incorrect</string>
    <string name="error">Error</string>
    <string name="button_text_back">Back</string>
    <string name="header_register">Sign up</string>
    <string name="header_desc_register">Create an account to get access to all the feature</string>
    <string name="button_text_register">Create account</string>
    <string name="content_desc_create_new_loan">Submit a new application</string>
    <string name="action_sign_out">Sign out</string>
    <string name="start_text_no_loan_application">You don\'t have loan applications</string>
    <string name="info_name_text">Applicant\'s name</string>
    <string name="info_surname_text">Applicant\'s surname</string>
    <string name="info_number_text">Phone number</string>
    <string name="info_date_text">Date of registration</string>
    <string name="info_status_text">Application status</string>
    <string name="info_amount_text">Amount</string>
    <string name="info_percent_text">Loan percentage</string>
    <string name="info_period_text">Period</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone">Phone number</string>
    <string name="loan_processing">Loan processing</string>
    <string name="header_desc_loan">You are offered the conditions on which you can apply for a loan. Please fill in all fields</string>
    <string name="hint_amount">Amount</string>
    <string name="max_amount">Max amount</string>
    <string name="percent">Percent</string>
    <string name="sent_request">Send request</string>
    <string name="period">Period</string>
    <string name="error_empty_not_valid">This field must be filled</string>
    <string name="error_amount_not_valid">The value in this field must not exceed the max amount</string>
</resources>