<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.info.InfoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/info_menu"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <TextView
                android:id="@+id/const_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info_name_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/const_surname_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info_surname_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/const_name_text_view" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:lines="1"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/const_name_text_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/const_name_text_view"
                app:layout_constraintTop_toTopOf="@+id/const_name_text_view" />

            <TextView
                android:id="@+id/surname_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/const_surname_text_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/const_surname_text_view"
                app:layout_constraintTop_toTopOf="@+id/const_surname_text_view" />

            <TextView
                android:id="@+id/const_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info_number_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/const_surname_text_view" />

            <TextView
                android:id="@+id/number_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/const_number_text_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/const_number_text_view"
                app:layout_constraintTop_toTopOf="@+id/const_number_text_view" />

            <TextView
                android:id="@+id/const_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info_date_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/const_number_text_view" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/const_date_text_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/const_date_text_view"
                app:layout_constraintTop_toTopOf="@+id/const_date_text_view" />

            <TextView
                android:id="@+id/const_status_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info_status_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/const_date_text_view" />

            <TextView
                android:id="@+id/status_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/const_status_text_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/const_status_text_view"
                app:layout_constraintTop_toTopOf="@+id/const_status_text_view" />

            <TextView
                android:id="@+id/const_amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info_amount_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/const_status_text_view" />

            <TextView
                android:id="@+id/amount_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/const_amount_text_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/const_amount_text_view"
                app:layout_constraintTop_toTopOf="@+id/const_amount_text_view" />

            <TextView
                android:id="@+id/const_percent_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info_percent_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/const_amount_text_view" />

            <TextView
                android:id="@+id/percent_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/const_percent_text_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/const_percent_text_view"
                app:layout_constraintTop_toTopOf="@+id/const_percent_text_view" />

            <TextView
                android:id="@+id/const_period_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/info_period_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/const_percent_text_view" />

            <TextView
                android:id="@+id/period_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/const_period_text_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/const_period_text_view"
                app:layout_constraintTop_toTopOf="@+id/const_period_text_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>